<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
    <name>mapping</name>
    <version>0.0.0</version>
    <description>
        Mapping node to place obstacles in the environment and define starting position
    </description>
    <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

</package>